# dahua_sdk_ultimate

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  go.mod  go.sum  main  openapi.yaml
api/dahua_sdk_ultimate/: dahua_sdk_ultimate.grpc.pb.cc  dahua_sdk_ultimate.grpc.pb.h  dahua_sdk_ultimate.pb.cc  dahua_sdk_ultimate.pb.h  dahua_sdk_ultimate.proto
api/dahua_sdk_ultimate/v1/: error_reason.grpc.pb.cc  error_reason.grpc.pb.h  error_reason.pb.cc  error_reason.pb.h  error_reason.proto  greeter.grpc.pb.cc  greeter.grpc.pb.h  greeter.pb.cc  greeter.pb.h  greeter.proto  grpctool.sh
cmd/dahua_sdk_ultimate/: greeter_async_client.cc  greeter_async_client2.cc  greeter_async_server.cc  main.cpp  wire.go  wire_gen.go
configs/: config.ini  workflow.xml
internal/biz/: greeter.go
internal/conf/: conf.grpc.pb.cc  conf.grpc.pb.h  conf.pb.cc  conf.pb.h  conf.proto
internal/data/: data.go  greeter.go
internal/device/: alarm_message.cpp  alarm_message.h  device_register.cpp  device_register.h  read_me.md  rule_config.cpp  rule_config.h
internal/server/: grpc.go  grpc_server.cpp  grpc_server.h  http.go
internal/service/: greeter.go  helloworld.go
internal/tools/: ini_file.cpp  ini_file.h  singleton.h  system.cpp  system.h
